Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9291

Android: All apps crash by default

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.7.2
    • Qt Creator 2.7.1
    • Android Support
    • None
    • 5624232c619a25a2a3750e21d113b797a0e4e26f

      Symptoms:

      When using the packaged Qt SDK and deploying to Android, the app crashes on startup with the error: could not load library "libgnustl_shared.so"

      Possible workarounds:

      1. Use a different deployment method; both "Install Ministro" and "Deploy Local Qt Libraries" work properly

      2. Copy the file libgnustl_shared.so from the Android SDK to QT_SDK_LOCATION/5.1.0-beta1/android_armv7/lib

      3. Use locally built Qt libraries

      Solution:

      The logic from the fix for QTCREATORBUG-8665 also needs to be applied to the new bundling method.

        For Gerrit Dashboard: QTCREATORBUG-9291
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes