Bundle libgnustl_shared.so directly from Android NDK

We need the logic from 78aa64e06b60bac232fddf87dea3509d1e08c1c0
in the bundle deployment as well. This will ignore
libgnustl_shared.so if the Qt installation contains it (for
compatibility mostly) and it will copy it from the NDK
into the bundle.

Task-number: QTCREATORBUG-9291
Change-Id: I5ab59602a3dc64d728a58dd1ee70153c09deac72
Reviewed-by: Daniel Teske <daniel.teske@digia.com>